--- a/inventory/templates/inventory/base.html
+++ b/inventory/templates/inventory/base.html
@@ -60,6 +60,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'inventory:transaction_list' %}">Transactions</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'inventory:historical_inventory' %}">
+                            <i class="fas fa-history me-1"></i>Historical Inventory
+                        </a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="stockDropdown" role="button" data-bs-toggle="dropdown">
                             Stock Operations
